[package]
name = "tr4sh_rebuffed"
version = "1.34.0"
authors = ["Meli Satana"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
smash2 = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1
